# verse

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: conf.py  index.md
docs/ipynb/: photometry.ipynb
docs/md/: installation.md
test/: test.py
verse/: __init__.py  near_eclipsing_binary.py  tfop_observation.py
verse/reports/: __init__.py  exofop_upload.py  latex_template.py  nebcheck.py  tessnotes.py  transitmodel.py
