[tool.poetry]
name = "verse"
version = "0.0.1"
description = "Annex to prose package for TESS reporting"
authors = ["Mathilde Timmermans"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mathtimm/verse"

[tool.poetry.dependencies]
prose = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
docutils = "*"
jupyterlab = "*"
myst-parser = "*"
sphinx-book-theme = "^1.0.0"
myst-nb = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
toml = "*"
ipywidgets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
